File: plugins/nexus-default-role-plugin/src/main/java/org/sonatype/nexus/plugins/defaultrole/internal/DefaultRoleStateContributor.java